--- a/src/components/socialMedia/SocialMedia.scss
+++ b/src/components/socialMedia/SocialMedia.scss
@@ -88,3 +88,9 @@
     text-align: center;
   }
 }
+@media (max-width: 768px) {
+  .social-media-div {
+    justify-content: center;
+    margin-top: 10px;
+  }
+}
